plugins {
    id "architectury-plugin" version "3.4-SNAPSHOT"
    id "dev.architectury.loom" version "1.11-SNAPSHOT" apply false
    id 'io.github.juuxel.loom-quiltflower' version '1.8.0' apply false
    id "maven-publish"
}

architectury {
    minecraft = rootProject.minecraft_version
}


subprojects {
    apply plugin: "dev.architectury.loom"
    apply plugin: "io.github.juuxel.loom-quiltflower"
    apply plugin: "maven-publish"

    loom {
        silentMojangMappingsLicense()
    }

    dependencies {
        minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
        mappings loom.officialMojangMappings()
    }
}


allprojects {
    apply plugin: "java"
    apply plugin: "architectury-plugin"

    archivesBaseName = rootProject.archives_base_name
    version = rootProject.mod_version
    group = rootProject.maven_group


    def apikeyPropertiesFile = rootProject.file("secret/secrets.properties");
    def apikeyProperties = new Properties()
    if (apikeyPropertiesFile.exists()) {
        apikeyProperties.load(new FileInputStream(apikeyPropertiesFile))
    }


    repositories {
        mavenLocal()

        def githubUser = apikeyProperties['gpr.user'] ?: System.getenv("GPR_USER") ?: System.getenv("GITHUB_ACTOR") ?: System.getenv("USERNAME") ?: ""
        def githubToken = apikeyProperties['gpr.key'] ?: System.getenv("GPR_KEY") ?: System.getenv("GITHUB_TOKEN") ?: System.getenv("TOKEN") ?: ""
        maven {
            url = uri("https://maven.pkg.github.com/eirmax/taniwha-remaked")
            credentials {
                username = githubUser
                password = githubToken
            }
        }
        maven { url "https://maven.shedaniel.me" }
        maven { url "https://maven.neoforged.net/releases" }
        maven { url "https://maven.blamejared.com/" }
        maven { url 'https://jitpack.io' }
        maven { url "https://maven.terraformersmc.com/" }
    }

    tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
        options.release = 21
    }

    java {
        withSourcesJar()
    }

    tasks.register("validateJsonResources") {
        doLast {
            def resourcesDir = file("src/main/resources")
            if (!resourcesDir.exists()) {
                return
            }

            def slurper = new groovy.json.JsonSlurper()
            fileTree(resourcesDir).matching { include "**/*.json" }.each { jsonFile ->
                try {
                    slurper.parse(jsonFile)
                } catch (Exception ex) {
                    throw new GradleException("Invalid JSON resource: ${jsonFile}", ex)
                }
            }

            def legacyAdvancements = new File(resourcesDir, "data/biomemakeover/advancements")
            if (legacyAdvancements.exists()) {
                throw new GradleException("Legacy 1.20 resource directory remains: ${legacyAdvancements}")
            }

            ["data/forge/blocks", "data/forge/items"].each { oldForgeTagPath ->
                def legacyForgeTagDir = new File(resourcesDir, oldForgeTagPath)
                if (legacyForgeTagDir.exists()) {
                    throw new GradleException("Legacy forge tag directory remains: ${legacyForgeTagDir}")
                }
            }

            fileTree(new File(resourcesDir, "data")).matching {
                include "**/tags/blocks/**", "**/tags/items/**", "**/tags/entity_types/**"
            }.files.each { legacyTagFile ->
                throw new GradleException("Legacy 1.20 tag directory remains: ${legacyTagFile}")
            }

            def advancementDir = new File(resourcesDir, "data/biomemakeover/advancement")
            if (advancementDir.exists()) {
                fileTree(advancementDir).matching { include "**/*.json" }.each { advancementFile ->
                    def advancement = slurper.parse(advancementFile)
                    def icon = advancement.display?.icon
                    if (icon instanceof Map && (icon.containsKey("item") || icon.containsKey("nbt"))) {
                        throw new GradleException("Legacy advancement icon format in ${advancementFile}")
                    }
                    if (icon instanceof Map && icon.id == "biomemakeover:icon_item") {
                        throw new GradleException("Advancement icon uses non-stackable fake item in ${advancementFile}")
                    }

                    def criteria = advancement.criteria
                    def requirements = advancement.requirements
                    if (criteria instanceof Map && requirements instanceof List) {
                        def criteriaKeys = criteria.keySet() as Set
                        def requirementKeys = requirements.collectMany { requirement ->
                            requirement instanceof List ? requirement : [requirement]
                        } as Set

                        if (criteriaKeys != requirementKeys) {
                            throw new GradleException("Advancement requirements do not match criteria in ${advancementFile}")
                        }
                    }
                }
            }
        }
    }

    tasks.named("check") {
        dependsOn tasks.named("validateJsonResources")
    }
}
